kube_keycloak_install/keycloakIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
    - http:
       paths:
       - path: /auth
         pathType: Prefix
         backend:
           service:
             name: keycloak
             port:
               number: 8080
